view single event
