# config/swagger.json
@@ -262,6 +262,32 @@
             "Eventstore_auth": ["write:Events", "read:Events"]
           }
         ]
+      },
+      "get": {
+        "tags": ["Events"],
+        "summary": "Get single event",
+        "description": "Returns a single events",
+        "operationId": "single event",
+        "produces": ["application/xml", "application/json"],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/Event"
+            }
+          },
+          "400": {
+            "description": "Invalid ID supplied"
+          },
+          "404": {
+            "description": "Event not found"
+          }
+        },
+        "security": [
+          {
+            "api_key": []
+          }
+        ]
       }
     },
     "api/events/{slug}/like": {
